fixed z index tooltip going behind left nav

--- a/src/components/common/Tooltip/Tooltip.css
+++ b/src/components/common/Tooltip/Tooltip.css
@@ -6,7 +6,7 @@
   backdrop-filter: blur(5px);
   text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
   font-weight: 600;
-  z-index: 3;
+  z-index: 50;
 
   border-radius: 10px;
 
